--- a/examples/mcp/pom.xml
+++ b/examples/mcp/pom.xml
@@ -15,6 +15,7 @@
         <quarkus.platform.version>3.24.1</quarkus.platform.version>
         <skipITs>true</skipITs>
         <surefire-plugin.version>3.5.3</surefire-plugin.version>
+        <!-- We use the SNAPSHOT in order to be able to use the McpAssured API -->
         <quarkus.mcp.server.version>999-SNAPSHOT</quarkus.mcp.server.version>
     </properties>
 
